Fix the subpixel precision offset problem in Color Smudge Paint Op

This patch does two changes:
1) We save not the theoretical hotspot of the lastly painted dab, but
   the real center of the dab.
2) Disables the calculation of the subpixel precision values for the dab
   in Color Smudge Op. The point is, the Color Smudge Op needs to access
   other areas of the image. And this access can be aligned only (yeah,
   since non-aligned bitBlt is not possible). So using of subpixel
   precision will 1) break alignment; 2) will make the calculation of the
   real hotspot of the dab impossible.

BUG:327235